--- a/app/views/taxonomy_level/unemployement.html.erb
+++ b/app/views/taxonomy_level/unemployement.html.erb
@@ -40,82 +40,102 @@
     </div>
   </div>
 
-  <div class='column-two-thirds'>
-    <h2 class='heading-medium'>
-      Measure explanation
-    </h2>
+  <div class="column-two-thirds">
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2>
+            <button>
+              Measure explanation
+            </button>
+          </h2>
+          <span class="plus-minus-icon"></span>
+        </div>
 
-    <h3 class='heading-small'>
-      What ‘unemployment’ is
-    </h3>
-    <p>
-      The rate of UK unemployment as a percentage of the potential labour force.
-    </p>
-    <p>
-      Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks. Find out more about how unemployment is measured.
-    </p>
-    <p>
-      The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation.
-    </p>
+        <div class="accordion__body" style="display: none;">
 
-    <h3 class='heading-small'>
-      Ethnicity categories used in this analysis
-    </h3>
-    <p class='margin-bottom-none'>
-      We are using the categories from the Labour Force Survey which are:
-    </p>
+          <h3 class='heading-small'>
+            What ‘unemployment’ is
+          </h3>
+          <p>
+            The rate of UK unemployment as a percentage of the potential labour force.
+          </p>
+          <p>
+            Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks. Find out more about how unemployment is measured.
+          </p>
+          <p>
+            The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation.
+          </p>
 
-    
-    <details class="normalize">
-      <summary><span class="summary">See all ethnicities</span></summary>
-      <div class="panel panel-border-narrow">
-        <ul class='margin-bottom-medium'>
-          <li>White</li>
-          <li>Black African/Caribbean</li>
-          <li>Mixed</li>
-          <li>Indian</li>
-          <li>Pakistani</li>
-          <li>Bangladeshi</li>
-          <li>Chinese</li>
-          <li>Other Asian</li>
-          <li>Other</li>
-          <li>Unknown</li>
-        </ul>
+          <h3 class='heading-small'>
+            Ethnicity categories used in this analysis
+          </h3>
+          <p class='margin-bottom-none'>
+            We are using the categories from the Labour Force Survey which are:
+          </p>
+
+          
+          <details class="normalize">
+            <summary><span class="summary">See all ethnicities</span></summary>
+            <div class="panel panel-border-narrow">
+              <ul class='margin-bottom-medium'>
+                <li>White</li>
+                <li>Black African/Caribbean</li>
+                <li>Mixed</li>
+                <li>Indian</li>
+                <li>Pakistani</li>
+                <li>Bangladeshi</li>
+                <li>Chinese</li>
+                <li>Other Asian</li>
+                <li>Other</li>
+                <li>Unknown</li>
+              </ul>
+            </div>
+          </details>
+
+          <details class="normalize">
+            <summary><span class="summary">More information</span></summary>
+            <div class="panel panel-border-narrow">
+              <p>
+                Changes were made to the Labour Force Survey ethnicity questions in January to March 2011 to bring them more in line with Census data collection on these topics. In April to June 2011 furthers changes were made to the ethnicity questions to bring them in line with Scottish Census. As a result there may be some inconsistencies with estimates prior to 2011.  
+              </p>
+            </div>
+          </details>
+
+        </div>
       </div>
-    </details>
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2>
+            <button>
+              Things you need to know
+            </button>
+          </h2>
+          <span class="plus-minus-icon"></span>
+        </div>
 
-    <details class="normalize">
-      <summary><span class="summary">More information</span></summary>
-      <div class="panel panel-border-narrow">
-        <p>
-          Changes were made to the Labour Force Survey ethnicity questions in January to March 2011 to bring them more in line with Census data collection on these topics. In April to June 2011 furthers changes were made to the ethnicity questions to bring them in line with Scottish Census. As a result there may be some inconsistencies with estimates prior to 2011.  
-        </p>
+        <div class="accordion__body" style="display: none;">
+
+          <p>
+            These unemployment figures are estimates based on a national survey and therefore are subject to sampling error and in some cases may not reflect the actual population.
+          </p>
+          <p>
+            Smaller numbers of survey respondents from ethnic minority backgrounds mean that unemployment estimates for ethnic minorities are more unreliable than estimates for White people.
+          </p>
+          <p>
+            Results derived from a low number of responses are more likely to be affected by statistical variation, so observed changes might not reflect real differences. As such, caution is needed when interpreting short-term trends in the data especially for sub groups (for example, a particular ethnic group, age group and gender). Any values based on fewer than five responses have been completely suppressed. Values based on 5-10 responses are shown, but marked by an asterisk (*). These should be used with particular caution.
+          </p>
+          <p>
+            Estimates for unemployement rates by ethnicity by age by gender are given as annual estimates rather than quarterly estimates as sample sizes are not large enough to give reliable quarterly estimates.
+          </p>
+
+        </div>
       </div>
-    </details>
+    </div>
   </div>
+
 
   <div class="column-two-thirds" style="display: none">
-    <h2 class='heading-medium'>
-      Main points
-    </h2>
-    <p>
-      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
-    </p>
-    <p>
-      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
-    </p>
-    <p>
-      Chinese people had the lowest unemployment rate. Between October and December 2016, around 6,000 Chinese people (3.5%), aged 16+, were unemployed. 
-    </p>
-    <p>
-      The rate of unemployment for Chinese people was 2.3 times lower than the average for all ethnic minority groups.
-    </p>
-    <p>
-      Around 1.2 million (4.1%) of White people aged 16+ were unemployed. The rate of unemploymemnt for White people is nearly 2 times lower than rate for all ethnic minority groups.
-    </p>
-  </div>
-
-  <div class="column-two-thirds">
     <h2 class='heading-medium'>
       Things you need to know
     </h2>
