added labels to tables

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -168,7 +168,11 @@
     <%= render 'graphs/unemployment_rate_by_ethnicity.html' %>
 
   </div>
-
+  <div class="column-full">
+    <h3 class='heading-small'>
+      Table
+    </h3>
+  </div>
   <details class="normalize">
     <summary><span class="summary">See data in table</span></summary>
     <div class="panel panel-border-narrow">
@@ -248,7 +252,11 @@
     <%= render 'graphs/unemployment_rate_by_ethnicity_gender.html' %>
 
   </div>
-
+  <div class="column-full">
+    <h3 class='heading-small'>
+      Table
+    </h3>
+  </div>
   <details class="normalize">
     <summary><span class="summary">See data in table</span></summary>
     <div class="panel panel-border-narrow">
@@ -397,7 +405,11 @@
       <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
     </div>
   </div>
-
+  <div class="column-full">
+    <h3 class='heading-small'>
+      Table
+    </h3>
+  </div>
   <details class="normalize">
     <summary><span class="summary">See data in table</span></summary>
     <div class="panel panel-border-narrow">
@@ -537,7 +549,11 @@
     </h3>
     <img src="/assets/graphs/unemployment-time-white.svg">
   </div>
-
+  <div class="column-full">
+    <h3 class='heading-small'>
+      Table
+    </h3>
+  </div>
   <details class="normalize" style="padding-top: 15px;">
     <summary><span class="summary">See data in table</span></summary>
     <div class="panel panel-border-narrow">
